--- a/MyImdb/Properties/launchSettings.json
+++ b/MyImdb/Properties/launchSettings.json
@@ -11,7 +11,7 @@
 	"MyImdb": {
 	  "commandName": "Project",
 	  "dotnetRunMessages": true,
-	  "launchBrowser": true,
+	  "launchBrowser": false,
 	  "applicationUrl": "https://localhost:7188;http://localhost:5188",
 	  "environmentVariables": {
 		"ASPNETCORE_ENVIRONMENT": "Development"
@@ -19,7 +19,7 @@
 	},
 	"IIS Express": {
 	  "commandName": "IISExpress",
-	  "launchBrowser": true,
+	  "launchBrowser": false,
 	  "environmentVariables": {
 		"ASPNETCORE_ENVIRONMENT": "Development"
 	  }
