--- a/MyImdb/appsettings.Development.json
+++ b/MyImdb/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+	"DefaultConnection": "Data Source:.;Initial Catalog=MyImdb;Integrated Security=True"
+  },
   "Logging": {
 	"LogLevel": {
 	  "Default": "Information",
