--- a/MyImdb/MyImdb.csproj
+++ b/MyImdb/MyImdb.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Api\Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Business\Services" />
+  </ItemGroup>
+
 </Project>
