--- a/MyImdb/appsettings.Development.json
+++ b/MyImdb/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-	"DefaultConnection": "Data Source:.;Initial Catalog=MyImdb;Integrated Security=True"
+	"DefaultConnection": "Data Source=.;Initial Catalog=MyImdb;Integrated Security=True"
   },
   "Logging": {
 	"LogLevel": {
