feat(MyImdb): add Serilog

--- a/MyImdb/appsettings.json
+++ b/MyImdb/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Serilog": {
+	"Using": ["Serilog.Sinks.File"],
+	"MinimumLevel": "Information",
+	"Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+	"WriteTo": []
+  },
   "Logging": {
 	"LogLevel": {
 	  "Default": "Information",
