--- a/MyImdb/MyImdb.csproj
+++ b/MyImdb/MyImdb.csproj
@@ -14,6 +14,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1"/>
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0"/>
+    <PackageReference Include="Serilog.Sinks.AzureTableStorage" Version="4.0.0"/>
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0"/>
   </ItemGroup>
 
   <ItemGroup>
