--- a/MyImdb/appsettings.Development.json
+++ b/MyImdb/appsettings.Development.json
@@ -2,6 +2,18 @@
   "ConnectionStrings": {
 	"DefaultConnection": "Data Source=.;Initial Catalog=MyImdb;Integrated Security=True"
   },
+  "Serilog": {
+	"MinimumLevel": "Information",
+	"WriteTo": [
+	  {
+		"Name": "File",
+		"Args": {
+		  "path": "./logs/log.txt",
+		  "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
+		}
+	  }
+	]
+  },
   "Logging": {
 	"LogLevel": {
 	  "Default": "Information",
