refactor: reformat code

--- a/MyImdb/appsettings.json
+++ b/MyImdb/appsettings.json
@@ -1,8 +1,14 @@
 {
   "Serilog": {
-	"Using": ["Serilog.Sinks.File"],
+	"Using": [
+	  "Serilog.Sinks.File"
+	],
 	"MinimumLevel": "Information",
-	"Enrich": ["FromLogContext", "WithMachineName", "WithThreadId"],
+	"Enrich": [
+	  "FromLogContext",
+	  "WithMachineName",
+	  "WithThreadId"
+	],
 	"WriteTo": []
   },
   "Logging": {
