--- a/MyImdb/Properties/launchSettings.json
+++ b/MyImdb/Properties/launchSettings.json
@@ -1,28 +1,35 @@
-﻿{
+{
   "iisSettings": {
-	"windowsAuthentication": false,
-	"anonymousAuthentication": true,
-	"iisExpress": {
-	  "applicationUrl": "http://localhost:41644",
-	  "sslPort": 44362
-	}
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:41644",
+      "sslPort": 44362
+    }
   },
   "profiles": {
-	"MyImdb": {
-	  "commandName": "Project",
-	  "dotnetRunMessages": true,
-	  "launchBrowser": false,
-	  "applicationUrl": "https://localhost:7188;http://localhost:5188",
-	  "environmentVariables": {
-		"ASPNETCORE_ENVIRONMENT": "Development"
-	  }
-	},
-	"IIS Express": {
-	  "commandName": "IISExpress",
-	  "launchBrowser": false,
-	  "environmentVariables": {
-		"ASPNETCORE_ENVIRONMENT": "Development"
-	  }
-	}
+    "MyImdb": {
+      "commandName": "Project",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:7188;http://localhost:5188",
+      "dotnetRunMessages": true
+    },
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchUrl": "https://localhost:7188",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "https://localhost:7188;http://localhost:5188"
+      },
+      "distributionName": ""
+    }
   }
 }
