style: use Async style for async functions

--- a/.editorconfig
+++ b/.editorconfig
@@ -160,7 +160,7 @@ dotnet_naming_rule.async_private_methods_must_be_camel_case_and_have_suffix.styl
 # Async non-private methods must be pascal case and end in "Async"
 dotnet_naming_rule.async_non_private_methods_must_be_pascal_case_and_have_suffix.severity = warning
 dotnet_naming_rule.async_non_private_methods_must_be_pascal_case_and_have_suffix.symbols = async_non_private_methods
-dotnet_naming_rule.async_non_private_methods_must_be_pascal_case_and_have_suffix.style = pascal_case_style
+dotnet_naming_rule.async_non_private_methods_must_be_pascal_case_and_have_suffix.style = async_non_private_method_style
 
 # Non-private members must be pascal case
 dotnet_naming_rule.non_private_members_must_be_pascal_case.severity = warning
@@ -173,3 +173,6 @@ dotnet_naming_rule.private_members_must_be_camel_case.severity = warning
 dotnet_naming_rule.private_members_must_be_camel_case.symbols = private_members
 dotnet_naming_rule.private_members_must_be_camel_case.style = camel_case_style
 # NOTE: this rule is a sort of "catch all" rule and therefore must appear after any rules with more specific symbol scopes
+
+[**/Controllers/*.cs]
+dotnet_naming_rule.async_non_private_methods_must_be_pascal_case_and_have_suffix.style = pascal_case_style
